addid icon, improved styling, titile buttons align correctly

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-
+    min-width: 400px;
     padding: 0;
     margin: 0;
     background-color: #30302e;
 }
 
 #title-bar {
-    --webkit-app-region: drag;
+    min-width: 400px;
     height: 40px;
     text-align: center;
     line-height: 40px;
@@ -17,11 +17,20 @@ body {
     -webkit-app-region: drag;
 }
 
+#icon {
+    position: fixed;
+    left: 0;
+    min-width: 40px;
+    height: 40px;
+}
+
 #title {
     position: fixed;
+    min-width: 220px;
     top: 0;
-    left: 6px;
+    left: 40px;
     color: white;
+    box-sizing: border-box;
 }
 
 #title-bar-btns {
@@ -30,6 +39,11 @@ body {
     top: 0px;
     right: 6px;
     color: white;
+    min-width: 80px;
+}
+
+#title-bar-btns > button {
+    min-width: 25px;
 }
 
 #main-body {
@@ -56,6 +70,6 @@ body {
     margin: 0 0 5px 0;
 }
 
-.lobby:hover{
+.lobby:hover {
     background-color: #2e2e2c;
 }
